[project]
name = "mock_py"
requires-python = ">=3.10"
dynamic = ["version", "dependencies"]
authors = [{ name = "Package Author", email = "pauthor@mail.com" }]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]


[build-system]
requires = ["setuptools>=77.0.0", "wheel"]
build-backend = "setuptools.build_meta"


[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = { attr = "mock_py.__version__.__version__" }
dependencies = { file = ["requirements.txt"] }
