[build-system]
requires = ["setuptools>=77.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mock_py"
dynamic = ["version", "dependencies"]
requires-python = ">=3.10"
authors = [{ name = "Package Author", email = "pauthor@mail.com" }]
readme = "README.md"
# license = "MIT"
# license-files = ["LICEN[CS]E.*"]
keywords = []
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = { attr = "mock_py.__version__.__version__" }
dependencies = { file = ["requirements.txt"] }
